sandc/test/fixtures/astRegression/shouldFail/productions/statement/RepeatMissingAmount.sand
pub class RepeatMissingAmount {
    foo() {
        repeat {
            
        }
    }
}